# shodo

./: README.md  package-lock.json  package.json  tailwind.config.js
public/katex/: mhchem.js
src/: App.svelte  main_style.scss  markdown.css  markdown.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/installer/: registry.wxs
src-tauri/src/: main.rs
src/components/: FileBrowser.svelte  MarkdownReader.svelte  MarkdownRenderer.svelte  NavBar.svelte  TreeNode.svelte
src/lib/: ColorUtil.ts  FileLoader.ts  FileTree.ts  FileUtils.ts  Mappings.ts  PrintModeUtils.ts
src/markdown-it-plugins/: HeadingLinksPlugin.ts  ImagePlugin.ts  KatexPlugin.ts  LinkPlugin.ts  MermaidPlugin.ts
