[package]
name = "shodo"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.6", features = [ "dialog-message", "protocol-asset", "cli", "fs-all", "shell-open"] }
serde = { version = "1.0.202", features = ["derive"] }
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", rev = "5e3900e682e13f3759b439116ae2f77a6d389ca2"}
serde_json = "1.0.117"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
