[package]
name = "shodo"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.6", features = [ "dialog-message", "protocol-asset", "cli", "fs-all", "shell-open", "devtools"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"

# File watching
notify = { version = "6.1.1", features = ["serde"] }
notify-debouncer-mini = "0.4.1"

color-eyre = "0.6.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
